apps/k8s/knarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knarr
  labels:
    name: media
    part-of: home-lab
    
    pod-security.kubernetes.io/enforce: privileged
