apps/k8s/knarr/heimdal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knarr-heimdal-ingress
  namespace: knarr
spec:
  rules:
  - host: heimdal.rip
    http:
      paths:
      - path: /sonarr
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 80
      - path: /radarr
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 80
      - path: /sabnzbd
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 80
      - path: /prowlarr
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 80
      - path: /jelly
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 80
      - path: /crunchy
        pathType: Prefix
        backend:
          service:
            name: sonarr-anime
            port:
              number: 80
