apps/k8s/knarr/paths-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knarr-paths-ingress
  namespace: knarr
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.priority: "10000"
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
spec:
  rules:
  - host: yggdrasil.rip
    http:
      paths:
      - path: /sonarr
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 80
      - path: /radarr
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 80
      - path: /sab
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 80
      - path: /prowlarr
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 80
      - path: /jelly
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 80
      - path: /crunchy
        pathType: Prefix
        backend:
          service:
            name: sonarr-anime
            port:
              number: 80
      - path: /seer
        pathType: Prefix
        backend:
          service:
            name: seer
            port:
              number: 80
      - path: /lidarr
        pathType: Prefix
        backend:
          service:
            name: lidarr
            port:
              number: 80
      - path: /chaptarr
        pathType: Prefix
        backend:
          service:
            name: chaptarr
            port:
              number: 80
